refactor(metrics): method refs (S1612), Math.clamp (S6885), extract nested ternaries (S3358), split declaration (S1659)